<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/backgroundColor"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_totalApplied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/yellow_round_corner"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_totalFilterApplied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/total_case"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:src="@drawable/ic_delete"
            android:tint="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_deathApplied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/yellow_round_corner"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_deathFilterApplied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/death"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:padding="5dp"
            android:src="@drawable/ic_delete"
            android:tint="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_recoveredApplied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/yellow_round_corner"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_recoveredFilterApplied"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:text="@string/recovered"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:padding="5dp"
            android:src="@drawable/ic_delete"
            android:tint="@color/colorPrimary" />
    </LinearLayout>
</LinearLayout>