<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:max="100"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/dark_transparent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/total_case"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_totalCase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/death"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_totalDeath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_balanceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/recovered"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_recovered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:textColor="@color/colorAccent"
                android:textSize="14dp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/layout_filter_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/blue_grey"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_sort_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:minHeight="40dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp">

            <TextView
                android:id="@+id/tv_column1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center"
                android:padding="2dp"
                android:text="Country"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/iv_country"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_down"
                android:tint="@color/black" />

        </LinearLayout>


        <LinearLayout

            android:id="@+id/ll_sort_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:minHeight="40dp">

            <TextView
                android:id="@+id/tv_column2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:padding="2dp"
                android:text="@string/total_case"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/iv_total"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_down"
                android:tint="@color/black" />

        </LinearLayout>

        <LinearLayout

            android:id="@+id/ll_sort_death"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:minHeight="40dp">

            <TextView
                android:id="@+id/tv_column3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:padding="2dp"
                android:text="@string/death"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/iv_death"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_down"
                android:tint="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sort_recovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:minHeight="40dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/tv_column4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:padding="2dp"
                android:text="@string/recovered"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/iv_recoverd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:src="@drawable/ic_arrow_down"
                android:tint="@color/black" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_placeholder"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="20dp"
                android:layout_gravity="center"
                android:tint="@color/colorAccent"/>

            <Button
                android:id="@+id/btn_retry"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@drawable/yellow_round_corner"
                android:minWidth="120dp"
                android:text="@string/retry"
                android:visibility="gone"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_countryList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            />
    </FrameLayout>
</LinearLayout>